--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "lum_event"
-version = "0.1.0"
+version = "0.1.1"
 authors = ["Torben Schweren"]
 edition = "2021"
 rust-version = "1.82.0"
@@ -8,7 +8,7 @@ description = "lum framework's event library"
 readme = "README.md"
 repository = "https://github.com/lum-rs/lum_event"
 license = "MIT"
-keywords = ["lum", "framework", "event", "events", "observable", "channels"]
+keywords = ["lum", "framework", "event", "events", "observable"]
 exclude = [".devcontainer", ".github", ".vscode"]
 
 [profile.release]
