--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,6 @@ lto = false
 
 [dependencies]
 lum_boxtypes = "0.2.0"
-lum_libs = "0.2.4"
+lum_libs = { version = "0.2.4", features = ["fern", "humantime", "log", "serde", "tokio", "uuid"] }
 lum_log = "0.2.3"
 thiserror = "2.0.12"
