--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,6 @@ lto = false
 
 [dependencies]
 lum_boxtypes = "0.2.2"
-lum_libs = { version = "0.2.9", features = ["dashmap", "fern", "humantime", "log", "parking_lot", "serde", "tokio", "uuid"] }
-lum_log = "0.2.7"
+lum_libs = { version = "0.2.10", features = ["dashmap", "humantime", "log", "parking_lot", "serde", "tokio", "uuid"] }
+lum_log = "0.3.0"
 thiserror = "2.0.17"
